# dscience-mlai

./: .gitignore  data_loading.py  main.py  my_script.py  project-structure.md  pyproject.toml  requirements.txt  tests.ipynb
src/utils/: seed.py
