[project]
name = "dscience-mlai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.1",
    "aquirdturtle-collapsible-headings",
    "black>=26.5.1",
    "catboost>=1.2.10",
    "duckdb>=1.5.3",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "ipywidgets>=8.1.8",
    "isort>=8.0.1",
    "jupyterlab>=4.5.8",
    "jupyterlab-code-formatter>=3.0.3",
    "jupyterlab-git>=0.54.0",
    "jupyterlab-lsp>=5.3.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "python-lsp-server>=1.14.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
